--- a/src/tools/FirmwareUpdater/calibrationwindow.ui
+++ b/src/tools/FirmwareUpdater/calibrationwindow.ui
@@ -342,7 +342,7 @@
               </property>
              </column>
             </widget>
-            <widget class="QWidget" name="">
+            <widget class="QWidget" name="layoutWidget">
              <property name="geometry">
               <rect>
                <x>10</x>
@@ -546,7 +546,7 @@
               </property>
              </column>
             </widget>
-            <widget class="QWidget" name="">
+            <widget class="QWidget" name="layoutWidget">
              <property name="geometry">
               <rect>
                <x>10</x>
@@ -677,8 +677,9 @@
               </property>
              </column>
             </widget>
+            <zorder>layoutWidget</zorder>
+            <zorder>matrixB</zorder>
             <zorder>tableFullScaleB</zorder>
-            <zorder>label_2</zorder>
            </widget>
            <widget class="QWidget" name="tab_3">
             <attribute name="title">
@@ -752,7 +753,7 @@
               </property>
              </column>
             </widget>
-            <widget class="QWidget" name="">
+            <widget class="QWidget" name="layoutWidget">
              <property name="geometry">
               <rect>
                <x>10</x>
@@ -1159,6 +1160,30 @@
        </item>
       </layout>
      </widget>
+    </item>
+    <item>
+     <layout class="QHBoxLayout" name="horizontalLayout_10">
+      <item>
+       <spacer name="horizontalSpacer_4">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item>
+       <widget class="QPushButton" name="btnClose">
+        <property name="text">
+         <string>Close</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </item>
    </layout>
   </widget>
