--- a/src/tools/FirmwareUpdater/res.qrc
+++ b/src/tools/FirmwareUpdater/res.qrc
@@ -2,5 +2,10 @@
     <qresource prefix="/">
         <file>images/restart-needed.png</file>
         <file>images/remove-icon-md.png</file>
+        <file>images/des1.png</file>
+        <file>images/sel1.png</file>
+        <file>images/sel2.png</file>
+        <file>images/sel-bw.png</file>
+        <file>images/des-bw.png</file>
     </qresource>
 </RCC>
