--- a/src/tools/FirmwareUpdater/mainwindow.ui
+++ b/src/tools/FirmwareUpdater/mainwindow.ui
@@ -94,7 +94,7 @@
            </property>
           </widget>
          </item>
-         <item row="0" column="3">
+         <item row="0" column="2">
           <widget class="QPushButton" name="btnGoToApplication">
            <property name="enabled">
             <bool>false</bool>
@@ -120,7 +120,7 @@
            </property>
           </widget>
          </item>
-         <item row="2" column="2">
+         <item row="2" column="1">
           <widget class="QPushButton" name="btnUploadApp">
            <property name="enabled">
             <bool>false</bool>
@@ -133,7 +133,7 @@
            </property>
           </widget>
          </item>
-         <item row="0" column="2">
+         <item row="0" column="1">
           <widget class="QPushButton" name="btnGoToMaintenance">
            <property name="enabled">
             <bool>false</bool>
@@ -187,7 +187,7 @@
            </property>
           </widget>
          </item>
-         <item row="1" column="2">
+         <item row="1" column="1">
           <widget class="QPushButton" name="btnRestart">
            <property name="enabled">
             <bool>false</bool>
@@ -213,7 +213,7 @@
            </property>
           </widget>
          </item>
-         <item row="2" column="3">
+         <item row="2" column="2">
           <widget class="QPushButton" name="btnJumpUpdater">
            <property name="enabled">
             <bool>false</bool>
@@ -226,7 +226,7 @@
            </property>
           </widget>
          </item>
-         <item row="2" column="2">
+         <item row="2" column="1">
           <widget class="QPushButton" name="btnUploadUpdater">
            <property name="enabled">
             <bool>false</bool>
@@ -239,7 +239,7 @@
            </property>
           </widget>
          </item>
-         <item row="5" column="2">
+         <item row="5" column="1">
           <widget class="QPushButton" name="btnBootUpdater">
            <property name="enabled">
             <bool>false</bool>
@@ -265,7 +265,20 @@
            </property>
           </widget>
          </item>
-         <item row="1" column="3">
+         <item row="7" column="1">
+          <widget class="QPushButton" name="btnEraseApplication">
+           <property name="disabled">
+            <bool>false</bool>
+           </property>
+           <property name="toolTip">
+            <string>It allows you to erase an application process.</string>
+           </property>
+           <property name="text">
+            <string>Erase Application</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="2">
           <widget class="QPushButton" name="btnBlink">
            <property name="enabled">
             <bool>false</bool>
@@ -278,7 +291,7 @@
            </property>
           </widget>
          </item>
-         <item row="5" column="3">
+         <item row="5" column="2">
           <widget class="QPushButton" name="btnEraseEeprom">
            <property name="enabled">
             <bool>false</bool>
