--- a/src/tools/FirmwareUpdater/mainwindow.ui
+++ b/src/tools/FirmwareUpdater/mainwindow.ui
@@ -267,7 +267,7 @@
          </item>
          <item row="7" column="1">
           <widget class="QPushButton" name="btnEraseApplication">
-           <property name="disabled">
+           <property name="enabled">
             <bool>false</bool>
            </property>
            <property name="toolTip">
